messages erreur OK

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -533,7 +533,8 @@ footer {
 .result{
   font-size: 14px;
   font-style: italic;
-  font-weight: normal;
+  font-weight: bold;
+  color: red;
 }
 
 @keyframes modalopen {
