--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -547,14 +547,14 @@ footer {
   }
 }
 
-
-/* confirmation modal */
-/* <div class="confirm">        
+/* 
+<div class="confirm" id="confirm-div"> 
+         <div class="confirm-background"></div>       
          <div class="confirm-body">
-          <span class="close" id="btnClose2"></span>
-          <div class="confirm-body-message">MERCI</div>
+          <span class="close closeConfirmationModal" id="btnClose2"></span>
+          <div class="confirm-body-message">Thank you for submitting your registration details</div>
           <input
-                class="btn-submit"
+                class="btn-submit confirm-btn-submit closeConfirmationModal"
                 type="submit"
                 class="button"
                 id="submit-confirm"
@@ -562,8 +562,11 @@ footer {
             />          
          </div> */
 
+
 .confirm{
   display: none;
+  justify-content: center;
+
 }
 
 .confirm-background{
@@ -572,28 +575,43 @@ footer {
   bottom:0px;
   left:0px;
   right:0px;
-  background: gray;
-  opacity: 0.5;
-  z-index: 1;
-  border: 1px solid red;
+  /* background: gray; */
+  background-color: rgba(26, 39, 156, 0.4);
+  /* opacity: 0.5; */
+  z-index: 1;  
 }
 
+
+  
+
 .confirm-body{
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
+  overflow: hidden;
+   /* max-width: 400px; 
+   min-width: 350px;
+  min-height: 300px; */
   z-index: 2;  
-  border: 1px solid blue;
   position: fixed;
   top:0px;
-  bottom:0px;
+  bottom:30px;
   left:0px;
-  right:0px;
+  right:0px;  
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 30%;
+  margin-right: 30%;
+  height: auto;
+  
+  
   background: #232323;
-  margin:7% 15% 7% 15% ;
+  /* margin:7% 30% 7% 30% ; */
   /* opacity: 2;
   z-index: 2; */
   /* height: 100%; */
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
-  
+  flex-direction: column;  
   justify-content: flex-start;
   align-items: center;
 
@@ -601,16 +619,59 @@ footer {
 }
 
 .confirm-body-message{
-  color:white;
+  
+  color: #fff;
   font-weight: normal;
   height: 100%;
-  margin: 30px;
+  margin: 30px 0px 30px 0px;
+  max-width: 400px;  
   display: flex;
   align-items: center;
   text-align: center;
-  font-size: 200%;
+  font-size: 120%;
 }
 
 .confirm-btn-submit{
   margin: 30px;
 }
+
+/* Responsive confirm modal*/
+
+ @media screen and (max-width: 540px) {
+  .confirm-body{    
+      max-width: unset; 
+      width: 100%;   
+
+      top:0px;
+      bottom:0px;
+      left:0px;
+      right:0px;  
+      margin-top: 30px;
+      margin-bottom: 30px;
+      margin-left: 0%;
+      margin-right: 0%;
+
+    
+      } 
+
+    }
+/* 
+  .confirm-body-message{   
+  
+  
+  height: 100%;
+  margin: 30px 10% 30px 0px;
+  max-width: unset;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-size: 150%;
+  color: blue;
+
+  }
+  
+  .confirm-btn-submit{
+
+  }
+}; */ 
